# libdecnumber

./: .gitignore  CMakeLists.txt  README.md  linux.toolchain.cmake
src/: readme.txt
